--- a/LAB3/main.css
+++ b/LAB3/main.css
@@ -1,11 +1,18 @@
-* {max-width: 1020px; margin-left: auto; margin-right: auto;}
-h1  {font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 30pt; text-align: center;}
+* {max-width: 1020px; margin-left: auto; margin-right: auto; position: relative; }
+h1  {width: 1020px; font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 30pt; text-align: center;}
 .div1 {
-    width: 300px;
-    height: 300px;
+    width: 450px;
+    height: 450px;
     border: 5px solid gray;
     margin: 10px;
-    position: relative;
+    float: left;
+  }
+.div2 {
+    width: 450px;
+    height: 450px;
+    border: 5px solid gray;
+    margin: 10px;
+    float: left;
   }
 .notselected   {color: black;text-decoration: none;}
 .line {height: 10pt; width: 1020px; border: none; color: black;background-color: black;}
@@ -21,12 +28,12 @@ h1  {font-family:Verdana, Geneva, Tahoma, sans-serif; font-size: 30pt; text-alig
 
 @keyframes movingheader 
 {
-    0% {left: 1020px;}
-    100% {left: 0px;}    
+    from {left: 1020px;}
+    to {left: 0px;}    
 }
 
 
 .image1 {transition: transform 2s}
 .image2 {transition: width 2s, height 2s}
 .image1:hover {transform: rotate(360deg)}
-.image2:hover {width:300px; height: 300px;}
+.image2:hover {width:450px; height: 450px;}
